--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.9.2",
   "description": "A library for manipulating nested data in a way reminiscent of MongoDB's \"Field Update Operators\" work (eg. $set)",
   "author": "Matthew Forrester <manip@keyboardwritescode.com>",
-  "dependencies": {
-    "bcrypt": "~0.7.7"
-  },
+  "dependencies": { },
   "devDependencies": {
     "jquery": "~2.1.0-beta3",
     "expect.js": "0.2.x",
