--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manip",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "A library for manipulating nested data in a way reminiscent of MongoDB's \"Field Update Operators\" work (eg. $set)",
   "author": "Matthew Forrester <manip@keyboardwritescode.com>",
   "dependencies": { },
@@ -17,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/forbesmyester/manip.git"
+  },
+  "scripts": {
+    "test": "mocha test/index.js"
   }
 }
